# geo-tif-parser

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/geo_tif_parser/: __init__.py  cli.py  converter.py  wells.py
